# multi-gravity-simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example-config.txt  requirements.txt
scripts/: generate_3body_fractal_inputs.py  plot_3body_fractal.py
source/: config.cpp  config.hpp  constants.cpp  constants.hpp  error_dict.cpp  main.cpp  particle.cpp  particle.hpp  particle_system.cpp  particle_system.hpp  unit_system.cpp  unit_system.hpp  util.cpp  util.hpp  vector2d.cpp  vector2d.hpp
